--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -157,6 +157,477 @@ ol {
   }
 }
 
+.advantages {
+  padding: 43px 0;
+}
+
+@media screen and (min-width: 768px) {
+  .advantages {
+    padding: 40px 0;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .advantages {
+    padding: 108px 0;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .advantage-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+.advantage-item {
+  position: relative;
+  width: 215px;
+  margin: 0 auto;
+}
+
+@media screen and (max-width: 767px) {
+  .advantage-item:not(:last-child) {
+    margin-bottom: 26px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .advantage-item:not(:last-child) {
+    margin-right: 21px;
+  }
+}
+
+@media screen and (min-width: 1366px) {
+  .advantage-item {
+    width: 448px;
+    margin-right: 0;
+  }
+}
+
+.advantage-item:nth-child(1)::before {
+  background-image: url(../images/icons/advantage-icon3.svg);
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 60px;
+  height: 60px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+@media screen and (min-width: 1366px) {
+  .advantage-item:nth-child(1)::before {
+    width: 102px;
+    height: 100px;
+  }
+}
+
+.advantage-item:nth-child(2)::before {
+  background-image: url(../images/icons/advantage-icon2.svg);
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 60px;
+  height: 60px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+@media screen and (min-width: 1366px) {
+  .advantage-item:nth-child(2)::before {
+    width: 102px;
+    height: 100px;
+  }
+}
+
+.advantage-item:nth-child(3)::before {
+  background-image: url(../images/icons/advantage-icon1.svg);
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 60px;
+  height: 60px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+@media screen and (min-width: 1366px) {
+  .advantage-item:nth-child(3)::before {
+    width: 102px;
+    height: 100px;
+  }
+}
+
+.advantage-title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 60px;
+  padding-left: 70px;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 1.64;
+  letter-spacing: 0.08em;
+}
+
+@media screen and (min-width: 1366px) {
+  .advantage-title {
+    font-size: 20px;
+    padding-right: 110px;
+    padding-left: 90px;
+    height: 102px;
+  }
+}
+
+.program {
+  background-color: #111518;
+  padding-top: 50px;
+  padding-bottom: 437px;
+}
+
+.program-title {
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 1.3;
+  letter-spacing: 0.03em;
+  text-align: center;
+  color: #ffffff;
+}
+
+.program-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-left: 63px;
+  margin-top: 43px;
+  position: relative;
+}
+
+.program-list::after {
+  content: '';
+  display: block;
+  position: absolute;
+  background: url("../images/content/mobile/program-mob@2x.png");
+  background-size: contain;
+  opacity: 0.5;
+  width: 120px;
+  height: 137px;
+  bottom: -97px;
+  right: -20px;
+}
+
+.program-item {
+  position: relative;
+  padding-left: 20px;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+}
+
+.program-item:not(:last-child) {
+  padding-bottom: 40px;
+}
+
+.program-item:not(:last-child)::before {
+  content: '';
+  display: block;
+  position: absolute;
+  border-left: 1px solid #ffffff;
+  -webkit-transform: translate(-50%);
+          transform: translate(-50%);
+  left: 0;
+  top: 10px;
+  height: 100%;
+  z-index: 1;
+}
+
+.program-h3 {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 2;
+  text-transform: uppercase;
+  color: #ffffff;
+  position: relative;
+  margin-bottom: 5px;
+}
+
+.program-h3::before {
+  content: '';
+  display: block;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background-color: #ff6b09;
+  position: absolute;
+  bottom: 50%;
+  -webkit-transform: translate(-50%, 50%);
+          transform: translate(-50%, 50%);
+  left: -20px;
+  z-index: 2;
+}
+
+.program-education-list {
+  width: 176px;
+}
+
+.program-key-points {
+  font-size: 12px;
+  line-height: 1.649;
+}
+
+.program-key-points:not(:first-child) {
+  margin-top: 8px;
+}
+
+.program-h4 {
+  font-weight: bold;
+  line-height: 1.649;
+  color: #ff6b09;
+  margin-bottom: 5px;
+  height: 32px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  letter-spacing: inherit;
+}
+
+.program-points-description {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.67;
+  color: #b9b9b9;
+  opacity: 0.5;
+  letter-spacing: 0.08em;
+}
+
+.sub-title {
+  line-height: 1.36;
+  text-align: left;
+  width: 180px;
+  margin-top: 50px;
+  display: block;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1365px) {
+  .program {
+    padding-top: 60px;
+    padding-bottom: 172px;
+  }
+  .program-title {
+    font-size: 26px;
+    text-align: left;
+  }
+  .program-list {
+    -webkit-box-align: stretch;
+        -ms-flex-align: stretch;
+            align-items: stretch;
+    margin-top: 52px;
+  }
+  .program-list::after {
+    content: '';
+    display: block;
+    position: absolute;
+    background: url("../images/content/tablet/program-tab@2x.png");
+    background-size: contain;
+    width: 384px;
+    height: 280px;
+    bottom: -139px;
+    right: -40px;
+  }
+  .program-item {
+    padding-left: 56px;
+  }
+  .program-h3::before {
+    left: -56px;
+  }
+  .program-education-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .program-education-list :nth-child(1) {
+    -webkit-box-flex: 0;
+        -ms-flex: none;
+            flex: none;
+    width: 176px;
+  }
+  .program-education-list :nth-child(2) {
+    width: 155px;
+  }
+  .program-education-list :nth-child(3) {
+    width: 110px;
+  }
+  .program-education-list-mod {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .program-key-points:not(:first-child) {
+    margin-top: 0px;
+    margin-left: 50px;
+  }
+  .sub-title {
+    line-height: 1.36;
+    text-align: center;
+    width: 100%;
+    margin-top: 189px;
+  }
+}
+
+@media screen and (min-width: 1366px) {
+  .program {
+    padding-top: 120px;
+    padding-bottom: 363px;
+    position: relative;
+  }
+  .program::before {
+    content: '';
+    display: block;
+    position: absolute;
+    border-top: 1px solid #ffffff;
+    -webkit-transform: translateY(156px);
+            transform: translateY(156px);
+    width: 100vw;
+    z-index: 1;
+  }
+  .program-container {
+    position: relative;
+  }
+  .program-container::after {
+    content: '';
+    display: block;
+    position: absolute;
+    background: url("../images/content/desktop/program-desk@2x.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    opacity: 0.5;
+    width: 667px;
+    height: 502px;
+    bottom: -363px;
+    left: -152px;
+  }
+  .program-title {
+    font-size: 46px;
+    line-height: 1.3;
+    letter-spacing: 0.03em;
+    text-align: left;
+    height: 57px;
+  }
+  .program-list {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    margin-left: 0px;
+    margin-top: 100px;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
+  }
+  .program-list::after {
+    content: 'none';
+    display: none;
+  }
+  .program-item {
+    padding-top: 60px;
+    padding-left: 0px;
+    -webkit-box-sizing: content-box;
+            box-sizing: content-box;
+    width: 240px;
+  }
+  .program-item:not(:last-child) {
+    padding-bottom: 0px;
+  }
+  .program-item:not(:last-child)::before {
+    content: 'none';
+    display: none;
+  }
+  .program-h3 {
+    font-size: 20px;
+    line-height: 1.4;
+    text-transform: none;
+    height: 28px;
+  }
+  .program-h3::first-letter {
+    font-size: 30px;
+    line-height: 0.93;
+  }
+  .program-h3::before {
+    content: '';
+    display: block;
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    background-color: #ff6b09;
+    position: absolute;
+    top: -60px;
+    bottom: auto;
+    -webkit-transform: translate(0%, -50%);
+            transform: translate(0%, -50%);
+    left: auto;
+    z-index: 2;
+  }
+  .program-education-list {
+    width: 240px;
+    display: block;
+  }
+  .program-h4 {
+    font-size: 20px;
+    display: block;
+    margin-bottom: 10px;
+  }
+  .program-key-points {
+    margin-top: 25px;
+  }
+  .program-key-points:not(:first-child) {
+    margin-top: 25px;
+    margin-left: 0px;
+  }
+  .program-points-description {
+    font-size: 18px;
+    line-height: 1.56;
+    color: #b9b9b9;
+    letter-spacing: 0.08em;
+  }
+  .sub-title {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    -webkit-clip-path: inset(100%);
+            clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+  }
+}
+
 .contacts-section {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -185,14 +656,14 @@ ol {
 
 @media screen and (min-width: 481px) {
   .contacts-section {
-    background-image: url("../images/content/tablet/contacts-mob.webp");
+    background-image: url("../images/content/tablet/contacts-tab.webp");
   }
 }
 
 /* 2x и 768+ */
 @media (min-device-pixel-ratio: 2) and (min-width: 481px), (-webkit-min-device-pixel-ratio: 2) and (min-width: 481px), (min-resolution: 192dpi) and (min-width: 481px), (min-resolution: 2dppx) and (min-width: 481px) {
   .contacts-section {
-    background-image: url("../images/content/tablet/contacts-mob@2x.webp");
+    background-image: url("../images/content/tablet/contacts-tab@2x.webp");
   }
 }
 
@@ -242,32 +713,6 @@ ol {
   .contacts-title {
     width: 688px;
     height: 100px;
-=======
-  }
-}
-
-.title {
-  font-style: normal;
-  font-weight: 800;
-  font-size: 20px;
-  line-height: 1.3;
-  letter-spacing: 0.03em;
-}
-
-.black-title {
-  color: #111518;
-}
-
-.white-title {
-  color: #ffffff;
-}
-
-.title-accent-word {
-  color: #ff6b09;
-}
-
-@media screen and (min-width: 768px) {
-  .title {
     font-size: 26px;
   }
 }
@@ -276,12 +721,9 @@ ol {
   .contacts-title {
     width: 1090px;
     height: 170px;
-=======
-  .title {
     font-size: 46px;
   }
 }
-
 
 .contacts-text {
   display: inline-block;
@@ -386,54 +828,5 @@ ol {
     height: 67px;
     font-size: 20px;
   }
-
-.advantages {
-  padding: 43px 0;
-}
-
-@media screen and (min-width: 768px) {
-  .advantage-list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-}
-
-@media screen and (max-width: 767px) {
-  .advantage-item:not(:last-child) {
-    margin-bottom: 26px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .advantage-item:not(:last-child) {
-    margin-right: 21px;
-  }
-}
-
-.advantage-title {
-  position: relative;
-  width: 215px;
-  min-height: 60px;
-  margin: 0 auto;
-  padding-left: 70px;
-  font-size: 14px;
-  font-weight: 700;
-  line-height: 1.64;
-  letter-spacing: 0.08em;
-}
-
-.advantage-title::before {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 60px;
-  height: 60px;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  background-color: #757575;
-
 }
 /*# sourceMappingURL=main.css.map */
