--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,18 +1,21 @@
-<section class="contacts">
-  <h2 class="contacts-title list">Registration for a <span class="contacts-color-word">free</span> phone <span
-      class="contacts-color-word">consultation</span> on the nuances of English UPE</h2>
-  <p class="contacts-text list">Leave a request for participation in a <span class="contacts-color-word">free
+<section class="contacts" id="registration">
+  <h2 class="contacts-title">Registration for a <span class="section-title-accent">free</span> phone <span
+      class="section-title-accent">consultation</span> on the nuances of English UPE</h2>
+  <p class="contacts-text">Leave a request for participation in a <span class="section-title-accent">free
       lesson</span>.<br> A consultant will contact you and answer your questions</p>
 
   <form class="contacts-form">
-    <label class="contacts-form-legend" for="username">
-      <input class="contacts-form-name list" type="text" name="user-name" id="username" placeholder="" required
-        autocomplete="off" />
-      <!-- <div class="placeholder-color">Name*</div> -->
-    </label>
-    <label class="contacts-form-legend" for="phone">
-      <input class="contacts-form-phone list" type="tel" name="user-tel" id="phone" placeholder="Phone*"
-        autocomplete="off" pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="096-111-11-11" /></label>
+    <div class="form-wrapper position-name">
+      <input class="contacts-form-input invalid-input" type="text" name="user-name" id="username" placeholder=" "
+        autocomplete="off" pattern="[A-Za-zА-Яа-яЁё]{4,}" title="не менее 4 буквы" />
+      <label class="form-label" for="username">Name*</label>
+    </div>
+
+    <div class="form-wrapper position-phone">
+      <input class="contacts-form-input invalid-input" type="tel" name="user-tel" id="phone" placeholder=" "
+        autocomplete="off" pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="096-111-11-11" />
+      <label class="form-label" for="phone">Phone*</label>
+    </div>
 
     <button type="submit" class="button">i want a free lesson</button>
   </form>
