--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -1,9 +1,10 @@
+//style for section and change background images//
 .contacts {
     display: flex;
     flex-direction: column;
     margin: 0 auto;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding-top: 55px;
+    padding-bottom: 55px;
     text-align: center;
 
     background-image: url("../images/content/mobile/contacts-mob.webp");
@@ -51,28 +52,33 @@
         background-image: url("../images/content/desktop/contacts-desk@2x.webp");
     }
 }
+@media screen and (min-width: 768px) {
+    .contacts {
+        padding-top: 66px;
+        padding-bottom: 67px;
+    }
+}
 
 @media screen and (min-width: 1366px) {
     .contacts {
         padding-top: 100px;
-        padding-bottom: 60px;
+        padding-bottom: 65px;
         max-width: 1680px;
     }
 }
+//style for title//
 .contacts-title {
-    display: inline-block;
     width: 280px;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 50px;
-    padding-bottom: 3px;
+    margin-bottom: 27px;
     font-weight: 800;
     font-style: normal;
     font-size: 14px;
     line-height: 1.3;
     color: $primary-white-color;
     @media screen and (min-width: 768px) {
-        margin-bottom: 61px;
+        margin-bottom: 52px;
         width: 688px;
         font-size: 26px;
     }
@@ -83,10 +89,10 @@
     }
 }
 
+//style for text section//
 .contacts-text {
-    display: inline-block;
     width: 285px;
-    margin-bottom: 30px;
+    margin-bottom: 46px;
     margin-left: auto;
     margin-right: auto;
 
@@ -96,29 +102,32 @@
     line-height: 1.22;
     color: $primary-white-color;
     @media screen and (min-width: 768px) {
-        margin-bottom: 25px;
+        margin-bottom: 23px;
         width: 452px;
         font-size: 14px;
     }
     @media screen and (min-width: 1366px) {
-        margin-bottom: 58px;
+        margin-bottom: 56px;
         width: 950px;
         font-size: 30px;
     }
 }
-.contacts-color-word {
+.section-title-accent {
     color: $accent-color;
 }
 
+//style for form consultation//
+
 .contacts-form {
+    display: inline-block;
     display: flex;
     flex-direction: column;
 }
 
-.contacts-form-name {
-    width: 280px;
-    height: 48px;
-    margin-bottom: 20px;
+.contacts-form-input {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
     padding-left: 28px;
     border: 1px solid $primary-white-color;
     font-family: Montserrat;
@@ -128,51 +137,67 @@
     line-height: 1.2;
     background-color: transparent;
     color: $primary-white-color;
-    @media screen and (min-width: 768px) {
-        width: 390px;
+
+    @media screen and (min-width: 1366px) {
+        font-size: 20px;
+        padding-left: 40px;
     }
+    // &::placeholder {
+    //     color: red;
+    // }
+}
+
+.position-name {
+    margin-bottom: 20px;
     @media screen and (min-width: 1366px) {
         margin-bottom: 30px;
-        width: 478px;
-        height: 70px;
-        font-size: 20px;
     }
 }
 
-.contacts-form-phone {
+.position-phone {
+    margin-bottom: 50px;
+    @media screen and (min-width: 768px) {
+        margin-bottom: 31px;
+    }
+    @media screen and (min-width: 1366px) {
+        margin-bottom: 80px;
+    }
+}
+
+.form-wrapper {
+    display: inline-block;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
     width: 280px;
     height: 48px;
-    margin-bottom: 50px;
-    padding-left: 28px;
-    border: 1px solid $primary-white-color;
-    font-family: Montserrat;
-    font-weight: 600;
-    font-style: normal;
-    font-size: 14px;
-    line-height: 1.2;
-    background-color: transparent;
-    color: $primary-white-color;
     @media screen and (min-width: 768px) {
         width: 390px;
     }
     @media screen and (min-width: 1366px) {
-        margin-bottom: 80px;
         width: 478px;
         height: 70px;
         font-size: 20px;
     }
 }
-// .contacts-form-legend {
-//     position: relative;
-// }
-// .placeholder-color {
-//     z-index: 100;
-//     cursor: text;
-//     position: absolute;
-//     top: 0px;
-//     left: 28px;
-//     color: $primary-white-color;
-// }
-// .contacts-form-legend input:invalid + .placeholder-color {
-//     display: inline;
-// }
+.form-label {
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 28px;
+    transform: translateY(-50%);
+    color: $primary-white-color;
+    font-size: 14px;
+    @media screen and (min-width: 1366px) {
+        font-size: 20px;
+        left: 40px;
+    }
+}
+.contacts-form-input:focus + .form-label,
+.contacts-form-input:not(:placeholder-shown) + .form-label {
+    color: transparent;
+}
+
+.invalid-input:invalid {
+    border-color: red;
+}
